# webshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: database.py  main.py  schemes.py
backend/core/: config.py  schemas.py
backend/crud/: admin.py  errors.py  hashing.py  items.py  pictures.py  security.py  users.py
backend/db/: models.py  session.py
backend/routers/: __init__.py  admin.py  items.py  login.py  my_account.py  users.py
backend/tests/: conftest.py  test_admin.py  test_app.py  test_user.py
backend/util/: __init__.py  database.py  dependencies.py  schemes.py
